--- a/RatingCenter/MvcCore/MvcCore.csproj
+++ b/RatingCenter/MvcCore/MvcCore.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Entities\Entities.csproj" />
+    <ProjectReference Include="..\Integrations\Integrations.csproj" />
+  </ItemGroup>
+
 </Project>
